# simple-data-builder

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  spark-defaults.conf
src/sdb/: cdc_extract.py  meta.py  quality.py  reconcile.py  schema.py
tests/: conftest.py  test_cdc_extract.py  test_meta.py  test_quality.py  test_reconcile.py  test_schema.py
